spec/invalid-syntax-examples/duplicate-type-definitions.bowtie
type A = X

type A = Y
